--- a/templates/temp1.html
+++ b/templates/temp1.html
@@ -1,73 +1,56 @@
 <!DOCTYPE html>
-<html>
 <head>
-<meta charset="UTF-8">
-<meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
-<title>Lib</title>
-<link href="../css/templates.css" rel="stylesheet">
-<style media="screen">
-<![CDATA[
-]]>
-</style>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
+  <title>Lib</title>
+  <link href="../css/templates.css" rel="stylesheet">
+  <style media="screen">
+    <![CDATA[
+    ]]>
+  </style>
 </head>
-<body>
 <main>
-<header class="sidebar-header">
-<nav>
-<a class="logo center" href="#logo">
-<img src="../assets/media/placeholder-logo.png">
-</a>
-<ul>
-<li>
-<a href="#home">Home</a>
-</li>
-<li>
-<a href="#company">Company</a>
-</li>
-<li>
-<a href="#about">About us</a>
-</li>
-<li>
-<a href="#find">Find us</a>
-</li>
-<li>
-<a href="#contact">Contact us</a>
-</li>
-</ul>
-</nav>
-</header>
-<section>
-<article>
-<h1>Welcome</h1>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates delectus facilis accusamus at earum iusto recusandae distinctio optio, voluptatibus libero, nesciunt velit cupiditate quam. Perspiciatis suscipit eum eaque commodi dignissimos?</div>
-<div>Adipisci asperiores quasi quia minima sint odio hic. Ex nulla, temporibus corporis incidunt rem officia asperiores qui quas id sapiente exercitationem possimus amet porro accusantium ipsa sunt. Animi, quasi, nihil!</div>
-<div>Molestias at, incidunt officia suscipit porro asperiores ut. Dolores unde ad eaque quam repellat nulla, sint quos. Harum suscipit voluptatum quis, distinctio quam magnam assumenda ullam repellendus fugit cupiditate possimus.</div>
-<div>Temporibus repellendus ullam itaque quos consequuntur? Sapiente magni harum eum dolor numquam corrupti quisquam debitis neque et labore quo cumque corporis, error voluptatibus a asperiores, cupiditate, dolore quam. Quidem, quam!</div>
-<div>Ipsum fugit, eligendi sit ea deleniti architecto consectetur corrupti et, ducimus incidunt deserunt velit distinctio optio laborum sequi. Fugiat sunt totam similique, cum corrupti doloribus facilis illo inventore praesentium assumenda.</div>
-</article>
-<article>
-<h1 class="bread-title-i">Lorem Ipsum</h1>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium qui totam ipsam soluta, laborum. Officia temporibus voluptatem tempore nam aspernatur vero quae? Cum animi hic impedit, nulla est esse distinctio!</div>
-<div>Facilis ducimus, accusantium a aut velit, quas. Iusto a deserunt tenetur, possimus, doloremque tempore aut quod facilis. Sint, amet autem, tempore optio eligendi ullam. Autem numquam, adipisci ipsum itaque vero!</div>
-<div>Aliquam natus, itaque corporis accusantium velit ipsam quam! Officia assumenda dolorum veritatis, maxime nam autem pariatur odit labore delectus voluptates, obcaecati ex? Nostrum illo necessitatibus, cum consectetur, reiciendis tempora esse.</div>
-<div>Odio nihil vitae repellendus, sit quisquam corporis odit magni officiis nemo, vel consectetur quas, voluptatum blanditiis a recusandae, qui rerum quos unde similique. Suscipit velit nemo ipsam, hic, nam delectus.</div>
-<div>Commodi vitae nam ex incidunt aspernatur accusamus veniam, pariatur asperiores aut voluptas obcaecati modi vel sequi nostrum illo aperiam. Dignissimos recusandae, asperiores aliquid eveniet? Enim quisquam ad dignissimos, magnam reiciendis.</div>
-<div>Eveniet, iure ducimus. Excepturi ipsa provident dolorem quo, sapiente fugiat in repellat harum voluptate ex, at exercitationem distinctio aliquid. Earum, sint deserunt consectetur sed recusandae dolor nulla ad porro iste.</div>
-<div>Minima dicta tenetur praesentium sunt ipsa nisi, commodi officiis temporibus quod, corrupti eius ullam labore voluptatibus dolore excepturi velit id quidem at soluta beatae nulla mollitia aspernatur. Voluptate, animi eos.</div>
-<div>Cum sequi velit at veniam beatae omnis harum quam, molestiae quos officiis quo numquam soluta illum, accusantium eveniet voluptates ipsa! Magnam commodi, quasi et earum natus sit repellendus nobis labore.</div>
-<div>Blanditiis consectetur laudantium dolorum, sit temporibus repellat, modi, officia illum aut debitis maiores, nobis cum voluptates numquam recusandae dolore nisi veniam itaque esse quia accusamus ad eos pariatur. Assumenda, asperiores.</div>
-<div>Maiores ut ea, sed dolorum! Vero, ipsa, veritatis. Porro provident dolorem odio fugit debitis facere accusantium recusandae, pariatur suscipit ipsum, voluptates inventore? Reiciendis minima voluptate ipsum facilis nemo atque possimus.</div>
-</article>
-<article>
-<h1>Lorem Ipsum</h1>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi harum eligendi, nam, ullam, aliquid tenetur pariatur molestiae quo assumenda, nulla itaque aut! Architecto, inventore. Sunt adipisci eius laboriosam velit, quidem.</div>
-<div>Accusantium modi similique placeat sit quia error ducimus nobis fuga, deleniti praesentium dicta totam soluta quod, ullam dolorum consequuntur vitae eligendi itaque in. Culpa iure, numquam. Autem, officia sequi eaque.</div>
-<div>Id eligendi dicta magni voluptatum, ad, consequatur in obcaecati sunt modi alias, numquam. Esse cupiditate hic molestias iusto earum possimus quas nisi architecto, ullam repellendus ipsam temporibus et quam accusantium.</div>
-</article>
-</section>
-<footer>
-<h1>Footer</h1>
-</footer>
+  <header class="sidebar-header">
+    <nav><a class="logo center" href="#logo"><img src="../assets/media/placeholder-logo.png"></a>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#company">Company</a></li>
+        <li><a href="#about">About us</a></li>
+        <li><a href="#find">Find us</a></li>
+        <li><a href="#contact">Contact us</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <article>
+      <h1>Welcome</h1>
+      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates delectus facilis accusamus at earum iusto recusandae distinctio optio, voluptatibus libero, nesciunt velit cupiditate quam. Perspiciatis suscipit eum eaque commodi dignissimos?</div>
+      <div>Adipisci asperiores quasi quia minima sint odio hic. Ex nulla, temporibus corporis incidunt rem officia asperiores qui quas id sapiente exercitationem possimus amet porro accusantium ipsa sunt. Animi, quasi, nihil!</div>
+      <div>Molestias at, incidunt officia suscipit porro asperiores ut. Dolores unde ad eaque quam repellat nulla, sint quos. Harum suscipit voluptatum quis, distinctio quam magnam assumenda ullam repellendus fugit cupiditate possimus.</div>
+      <div>Temporibus repellendus ullam itaque quos consequuntur? Sapiente magni harum eum dolor numquam corrupti quisquam debitis neque et labore quo cumque corporis, error voluptatibus a asperiores, cupiditate, dolore quam. Quidem, quam!</div>
+      <div>Ipsum fugit, eligendi sit ea deleniti architecto consectetur corrupti et, ducimus incidunt deserunt velit distinctio optio laborum sequi. Fugiat sunt totam similique, cum corrupti doloribus facilis illo inventore praesentium assumenda.</div>
+    </article>
+    <article>
+      <h1 class="bread-title-i">Lorem Ipsum</h1>
+      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium qui totam ipsam soluta, laborum. Officia temporibus voluptatem tempore nam aspernatur vero quae? Cum animi hic impedit, nulla est esse distinctio!</div>
+      <div>Facilis ducimus, accusantium a aut velit, quas. Iusto a deserunt tenetur, possimus, doloremque tempore aut quod facilis. Sint, amet autem, tempore optio eligendi ullam. Autem numquam, adipisci ipsum itaque vero!</div>
+      <div>Aliquam natus, itaque corporis accusantium velit ipsam quam! Officia assumenda dolorum veritatis, maxime nam autem pariatur odit labore delectus voluptates, obcaecati ex? Nostrum illo necessitatibus, cum consectetur, reiciendis tempora esse.</div>
+      <div>Odio nihil vitae repellendus, sit quisquam corporis odit magni officiis nemo, vel consectetur quas, voluptatum blanditiis a recusandae, qui rerum quos unde similique. Suscipit velit nemo ipsam, hic, nam delectus.</div>
+      <div>Commodi vitae nam ex incidunt aspernatur accusamus veniam, pariatur asperiores aut voluptas obcaecati modi vel sequi nostrum illo aperiam. Dignissimos recusandae, asperiores aliquid eveniet? Enim quisquam ad dignissimos, magnam reiciendis.</div>
+      <div>Eveniet, iure ducimus. Excepturi ipsa provident dolorem quo, sapiente fugiat in repellat harum voluptate ex, at exercitationem distinctio aliquid. Earum, sint deserunt consectetur sed recusandae dolor nulla ad porro iste.</div>
+      <div>Minima dicta tenetur praesentium sunt ipsa nisi, commodi officiis temporibus quod, corrupti eius ullam labore voluptatibus dolore excepturi velit id quidem at soluta beatae nulla mollitia aspernatur. Voluptate, animi eos.</div>
+      <div>Cum sequi velit at veniam beatae omnis harum quam, molestiae quos officiis quo numquam soluta illum, accusantium eveniet voluptates ipsa! Magnam commodi, quasi et earum natus sit repellendus nobis labore.</div>
+      <div>Blanditiis consectetur laudantium dolorum, sit temporibus repellat, modi, officia illum aut debitis maiores, nobis cum voluptates numquam recusandae dolore nisi veniam itaque esse quia accusamus ad eos pariatur. Assumenda, asperiores.</div>
+      <div>Maiores ut ea, sed dolorum! Vero, ipsa, veritatis. Porro provident dolorem odio fugit debitis facere accusantium recusandae, pariatur suscipit ipsum, voluptates inventore? Reiciendis minima voluptate ipsum facilis nemo atque possimus.</div>
+    </article>
+    <article>
+      <h1>Lorem Ipsum</h1>
+      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi harum eligendi, nam, ullam, aliquid tenetur pariatur molestiae quo assumenda, nulla itaque aut! Architecto, inventore. Sunt adipisci eius laboriosam velit, quidem.</div>
+      <div>Accusantium modi similique placeat sit quia error ducimus nobis fuga, deleniti praesentium dicta totam soluta quod, ullam dolorum consequuntur vitae eligendi itaque in. Culpa iure, numquam. Autem, officia sequi eaque.</div>
+      <div>Id eligendi dicta magni voluptatum, ad, consequatur in obcaecati sunt modi alias, numquam. Esse cupiditate hic molestias iusto earum possimus quas nisi architecto, ullam repellendus ipsam temporibus et quam accusantium.</div>
+    </article>
+  </section>
+  <footer>
+    <h1>Footer</h1>
+  </footer>
 </main>
-</body>
-</html>
